--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       <h1>Should I study?</h1>
       <div id="output"></div>
       <div id="input"></div>
+      <div id="app"></div>
     <script src="app.js"></script>
   </body>
 </html>
